# negative_space

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_REPORT_V1.md  CLAUDE.md  CODING_STANDARDS.md  COMPONENT_COHESION_REPORT.md  DESIGN_DECISIONS.md  README.md  REFACTORING_PLAN.md  REFACTORING_PLAN_V1.md  VISUAL_AUDIT_REPORT.md  index.html  package-lock.json  package.json  rebuild.sh  showcase.html  vite.config.ts
.cursor/rules/: no-git-commits.mdc
docs/: vault-spec.md
src/: App.vue  buildNumber.ts  router.ts  style.css  types.ts  utils.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/NudeNet320n.mlmodelc/: metadata.json  model.mil
src-tauri/resources/OpenNSFW2.mlmodelc/: metadata.json  model.mil
src-tauri/resources/OpenNSFW2.mlpackage/: Manifest.json
src-tauri/resources/OpenNSFW2.mlpackage/Data/com.apple.CoreML/: model.mlmodel
src-tauri/src/: apps.rs  browser.rs  caches_logs.rs  commands.rs  diskmap.rs  docker.rs  duplicates.rs  gradient.rs  image_utils.rs  intelligence.rs  large_files.rs  lib.rs  main.rs  maintenance.rs  memory.rs  nsfw.rs  packages.rs  preview.rs  process_info.rs  security.rs  similar_images.rs  spotlight.rs  thermal.rs  vault.rs  vitals.rs
src-tauri/swift/: Package.swift
src-tauri/swift/Sources/: Bridge.swift  FileClassifier.swift  SummaryGenerator.swift
src/__tests__/: largeFilesStore.test.ts  utils.test.ts  vaultStore.test.ts
src/components/: AppSelect.vue  BatteryCard.vue  Checkbox.vue  ChevronIcon.vue  CpuCard.vue  (+32 more)
(+51 files in other folders)
